--- a/archive/项目完成总结.md
+++ b/archive/项目完成总结.md
@@ -335,8 +335,8 @@ cargo tauri build
 ## 📞 获取帮助
 
 - 📖 [完整文档](README.md)
-- 🐛 [报告问题](https://github.com/yourusername/FloatSort/issues)
-- 💬 [讨论区](https://github.com/yourusername/FloatSort/discussions)
+- 🐛 [报告问题](https://github.com/Wonvy/FloatSort/issues)
+- 💬 [讨论区](https://github.com/Wonvy/FloatSort/discussions)
 - 📧 Email: support@floatsort.example.com
 
 ---
@@ -418,7 +418,7 @@ cargo tauri build
 
 用 ❤️ 和 🦀 制作
 
-[GitHub](https://github.com/yourusername/FloatSort) • [Issues](https://github.com/yourusername/FloatSort/issues) • [Discussions](https://github.com/yourusername/FloatSort/discussions)
+[GitHub](https://github.com/Wonvy/FloatSort) • [Issues](https://github.com/Wonvy/FloatSort/issues) • [Discussions](https://github.com/Wonvy/FloatSort/discussions)
 
 </div>
 
