fix: 完善活动日志国际化和UI优化
- 活动日志完全国际化
  - 修复20+个硬编码中文消息（检测到文件、已加入队列等）
  - 文件操作消息（检测、处理、失败）全部翻译
  - 规则操作消息（添加、更新、删除、上移、下移）全部翻译
  - 文件夹操作消息（添加、更新、删除、监控状态）全部翻译
  - 配置操作消息（导出、导入、清除记录）全部翻译
  - 批量处理消息（完成、成功、跳过、失败）全部翻译
  - Mini模式消息全部翻译

- UI优化
  - 移除状态栏图标感叹号（ℹ️），只保留文字
  - 移除Tab切换的活动日志记录（不必要）

- 翻译键扩展
  - 新增40+个活动日志相关翻译键（中文/英文）
  - 覆盖所有用户操作的反馈消息

现在英文模式下所有活动日志都是英文，无中文残留

--- a/ui/locales/en-US.json
+++ b/ui/locales/en-US.json
@@ -178,7 +178,7 @@
     "noActivity": "No activity yet",
     "startup": "Startup",
     "ready": "Ready",
-    "appReady": "FloatSort V2 Ready",
+    "appReady": "FloatSort Started",
     "fileDetected": "File detected",
     "fileOrganized": "File organized",
     "folderOrganized": "Folder organized",
@@ -186,7 +186,46 @@
     "fileFailed": "File failed",
     "batchStarted": "Batch organize started",
     "batchCompleted": "Batch organize completed",
-    "batchCancelled": "Batch organize cancelled"
+    "batchCancelled": "Batch organize cancelled",
+    "fileAddedToQueue": "added to queue",
+    "fileProcessing": "Processing",
+    "fileNotMatched": "No matching rule",
+    "windowRestored": "Window restored from tray",
+    "windowMinimized": "Window minimized to system tray",
+    "logCleared": "Activity log cleared",
+    "recordsCleared": "Processed file records cleared",
+    "filesDropped": "files/folders dropped",
+    "usingRule": "Using selected rule",
+    "processingWithRule": "files",
+    "completed": "Completed",
+    "success": "Success",
+    "skipped": "Skipped",
+    "failed": "Failed",
+    "ruleApplied": "Applied rule",
+    "ruleMovedUp": "Rule moved up",
+    "ruleMovedDown": "Rule moved down",
+    "ruleUnlinked": "Rule removed from folder association",
+    "folderUpdated": "Folder updated",
+    "folderAdded": "Folder added",
+    "folderMonitoring": "Monitoring",
+    "enabled": "enabled",
+    "disabled": "disabled",
+    "ruleUpdated": "Rule updated",
+    "ruleAdded": "Rule added",
+    "ruleDeleted": "Rule deleted",
+    "folderDeleted": "Folder deleted",
+    "groupDeleted": "Deleted group and its rules",
+    "ruleStatusChanged": "Rule",
+    "configExported": "Configuration exported to",
+    "configImported": "Configuration imported from",
+    "batchConfirm": "Batch organize confirmation",
+    "matched": "Matched",
+    "unmatched": "Unmatched",
+    "cancelled": "Batch organize cancelled",
+    "batchComplete": "Batch organize completed",
+    "miniMode": "Mini Mode",
+    "enterMini": "Entered Mini Mode",
+    "exitMini": "Exited Mini Mode"
   },
   "notifications": {
     "success": "Success",
