--- a/ui/locales/zh-CN.json
+++ b/ui/locales/zh-CN.json
@@ -178,7 +178,7 @@
     "noActivity": "暂无活动记录",
     "startup": "启动",
     "ready": "已就绪",
-    "appReady": "FloatSort V2 已就绪",
+    "appReady": "FloatSort 已启动",
     "fileDetected": "检测到文件",
     "fileOrganized": "文件已整理",
     "folderOrganized": "文件夹已整理",
@@ -186,7 +186,46 @@
     "fileFailed": "文件失败",
     "batchStarted": "开始批量整理",
     "batchCompleted": "批量整理完成",
-    "batchCancelled": "已取消批量整理"
+    "batchCancelled": "已取消批量整理",
+    "fileAddedToQueue": "已加入待处理队列",
+    "fileProcessing": "开始处理",
+    "fileNotMatched": "未匹配规则",
+    "windowRestored": "窗口从托盘恢复",
+    "windowMinimized": "窗口已最小化到系统托盘",
+    "logCleared": "活动日志已清空",
+    "recordsCleared": "清除已处理文件记录",
+    "filesDropped": "拖入文件/文件夹",
+    "usingRule": "使用选中规则",
+    "processingWithRule": "处理文件",
+    "completed": "完成",
+    "success": "成功",
+    "skipped": "跳过",
+    "failed": "失败",
+    "ruleApplied": "应用了规则",
+    "ruleMovedUp": "规则已上移",
+    "ruleMovedDown": "规则已下移",
+    "ruleUnlinked": "已将规则从文件夹关联中移除",
+    "folderUpdated": "更新文件夹",
+    "folderAdded": "添加文件夹",
+    "folderMonitoring": "监控",
+    "enabled": "启用",
+    "disabled": "停用",
+    "ruleUpdated": "更新规则",
+    "ruleAdded": "添加规则",
+    "ruleDeleted": "删除规则",
+    "folderDeleted": "删除文件夹",
+    "groupDeleted": "已删除组及其规则",
+    "ruleStatusChanged": "规则",
+    "configExported": "导出配置到",
+    "configImported": "导入配置从",
+    "batchConfirm": "批量整理确认",
+    "matched": "匹配",
+    "unmatched": "未匹配",
+    "cancelled": "已取消批量整理",
+    "batchComplete": "批量整理完成",
+    "miniMode": "Mini模式",
+    "enterMini": "进入Mini模式",
+    "exitMini": "退出Mini模式"
   },
   "notifications": {
     "success": "操作成功",
