优化UI和日志系统
- 移除所有emoji符号，让界面更简洁
- 改进清空日志确认对话框，不显示具体条数
- 优化窗口管理：保存和恢复窗口位置和状态
- 优化设置页面布局，更紧凑美观
- 修复窗口拖动问题，改进状态管理
- 删除旧的activity_log模块，统一使用tracing日志系统
- 调整默认窗口尺寸为500x750
- 修复日期选择器高度不一致问题

--- a/ui/locales/en-US.json
+++ b/ui/locales/en-US.json
@@ -60,7 +60,17 @@
     "theme": "Theme",
     "themeLight": "Light",
     "themeDark": "Dark",
-    "themeAuto": "System"
+    "themeAuto": "System",
+    "logManagement": "Log Management",
+    "logManagementDescription": "Log files are created daily, and expired logs can be automatically cleaned up based on retention days",
+    "logRetentionDays": "Log Retention Days",
+    "days7": "7 days",
+    "days15": "15 days",
+    "days30": "30 days (Recommended)",
+    "days60": "60 days",
+    "days90": "90 days",
+    "daysForever": "Keep Forever",
+    "logManagementHint": "A new log file is created each day, and expired logs will be automatically cleaned up on app startup"
   },
   "folders": {
     "title": "Monitored Folders",
@@ -173,11 +183,15 @@
     "title": "Activity Log",
     "filesProcessed": "Files Processed",
     "clearLog": "Clear Log",
-    "clearProcessed": "Clear Records",
-    "clearProcessedHint": "Clear processed file records to allow re-organizing previously processed files",
+    "confirmClearLog": "Are you sure you want to clear {count} log entries?",
+    "openLogFolder": "Open Logs",
+    "openLogFolderHint": "Open log folder",
     "noActivity": "No activity yet",
     "startup": "Startup",
     "ready": "Ready",
+    "from": "From",
+    "to": "To",
+    "today": "Today",
     "appReady": "FloatSort Started",
     "fileDetected": "File detected",
     "fileOrganized": "File organized",
