--- a/ui/locales/ja-JP.json
+++ b/ui/locales/ja-JP.json
@@ -60,7 +60,17 @@
     "theme": "テーマ",
     "themeLight": "ライト",
     "themeDark": "ダーク",
-    "themeAuto": "システム設定"
+    "themeAuto": "システム設定",
+    "logManagement": "ログ管理",
+    "logManagementDescription": "ログファイルは毎日自動的に作成され、保持日数に基づいて期限切れのログが自動的にクリーンアップされます",
+    "logRetentionDays": "ログ保持日数",
+    "days7": "7日",
+    "days15": "15日",
+    "days30": "30日（推奨）",
+    "days60": "60日",
+    "days90": "90日",
+    "daysForever": "永久保存",
+    "logManagementHint": "毎日新しいログファイルが作成され、期限切れのログはアプリ起動時に自動的にクリーンアップされます"
   },
   "folders": {
     "title": "監視フォルダー",
@@ -173,11 +183,15 @@
     "title": "アクティビティログ",
     "filesProcessed": "処理済みファイル",
     "clearLog": "ログをクリア",
-    "clearProcessed": "記録をクリア",
-    "clearProcessedHint": "処理済みファイル記録をクリアして、以前処理したファイルを再整理できるようにします",
+    "confirmClearLog": "{count} 件のログエントリをクリアしてもよろしいですか？",
+    "openLogFolder": "ログを開く",
+    "openLogFolderHint": "ログフォルダーを開く",
     "noActivity": "アクティビティがありません",
     "startup": "起動",
     "ready": "準備完了",
+    "from": "から",
+    "to": "へ",
+    "today": "今日",
     "appReady": "FloatSort V2 準備完了",
     "fileDetected": "ファイル検出",
     "fileOrganized": "ファイル整理済み",
