--- a/ui/locales/zh-CN.json
+++ b/ui/locales/zh-CN.json
@@ -60,7 +60,17 @@
     "theme": "主题",
     "themeLight": "浅色",
     "themeDark": "深色",
-    "themeAuto": "跟随系统"
+    "themeAuto": "跟随系统",
+    "logManagement": "日志管理",
+    "logManagementDescription": "日志文件按天自动创建，可设置保留天数自动清理过期日志",
+    "logRetentionDays": "日志保留天数",
+    "days7": "7天",
+    "days15": "15天",
+    "days30": "30天（推荐）",
+    "days60": "60天",
+    "days90": "90天",
+    "daysForever": "永久保留",
+    "logManagementHint": "每天自动创建一个日志文件，过期日志将在应用启动时自动清理"
   },
   "folders": {
     "title": "监控文件夹",
@@ -173,11 +183,15 @@
     "title": "活动日志",
     "filesProcessed": "已处理文件",
     "clearLog": "清空日志",
-    "clearProcessed": "清除记录",
-    "clearProcessedHint": "清除已处理文件记录，允许重新整理之前处理过的文件",
+    "confirmClearLog": "确定要清空 {count} 条日志记录吗？",
+    "openLogFolder": "打开日志",
+    "openLogFolderHint": "打开日志文件夹",
     "noActivity": "暂无活动记录",
     "startup": "启动",
     "ready": "已就绪",
+    "from": "从",
+    "to": "到",
+    "today": "今天",
     "appReady": "FloatSort 已启动",
     "fileDetected": "检测到文件",
     "fileOrganized": "文件已整理",
